Fixed pom, README.