@@ -1,17 +1,18 @@
-# Apache Maven JLink Plugin v0.1.0
+# JLink Maven Plugin v0.1.0
 
-[![Build Status](https://travis-ci.com/Akman/jlink-maven-plugin.svg?branch=v0.1.0)](https://travis-ci.com/Akman/jlink-maven-plugin)
+[![Build Status](https://travis-ci.com/akman/jlink-maven-plugin.svg?branch=v0.1.0)](https://travis-ci.com/akman/jlink-maven-plugin)
 [![License](https://img.shields.io/github/license/akman/jlink-maven-plugin.svg)](https://github.com/akman/jlink-maven-plugin/blob/master/LICENSE)
 
 The maven jlink plugin lets you create a custom runtime image with
 the jlink tool introduced in Java 9.
 
+[The jlink tool official description][jlink]
+
+[JEP 220: Modular Run-Time Images][jep220]
+
 The main idea is to avoid being tied to project artifacts and allow the user
 to fully control the process of creating an image. However, it is possible,
 of course, to customize the process using project artifacts.
-
-[The jlink tool official description][jlink]
-[JEP 220: Modular Run-Time Images][jep220]
 
 [The source for this project is available here][src]
 
@@ -19,10 +20,8 @@ of course, to customize the process using project artifacts.
 
 ## Goals
 
-This plugin has one goal is already bound to *packaging* phase within
-the maven lifecycle and is therefore, automatically executed.
-
-- jlink:jlink creates a custom runtime image with the jlink tool.
+This plugin has one *jlink* goal is already bound to *package* phase
+within the maven lifecycle and is therefore, automatically executed.
 
 To create a custom runtime image manually you need only to execute:
 
@@ -31,9 +30,6 @@ mvn jlink:jlink
 ```
 
 ## Usage
-
-When you want to create a custom runtime image with maven and jlink tool,
-you first have to create the following content:
 
 ```xml
 <project>
@@ -112,7 +108,8 @@ you first have to create the following content:
             dependencysets - sets of dependencies with specified includes and
                              excludes patterns (glob: or regex:) for file names
                              and regex patterns only for module names, and
-                             excludes for automatic modules
+                             property for excludes automatic modules, and
+                             property for includes output directory
           -->
           <modulepath>
             <pathelements>
@@ -434,19 +431,6 @@ you first have to create the following content:
           -->
           <vm>SERVER</vm>
 
-
-          <!-- always on -->
-
-
-          <!--
-            Fast loading of module descriptors. Always on.
-            The jlink CLI is: ‒‒system-modules=.
-            Default value: true.
-          -->
-          <!--
-          <systemmodules>false</systemmodules>
-          -->
-
         </configuration>
       </plugin>
     </plugins>
@@ -454,241 +438,6 @@ you first have to create the following content:
   ...
 </project>
 ```
-
-## JLink command line tool syntax
-
-```console
-jlink [options] --module-path modulepath --add-modules module [, module...]
-jlink @filename
-```
-
-**--module-path path**
-
-Specifies the module path. The path where the jlink tool discovers
-observable modules:
-
-- modular JAR files
-- JMOD files
-- exploded modules (directories)
-
-If this option is not specified, then the default module path
-is $JAVA_HOME/jmods. This directory contains the java.base module and
-the other standard and JDK modules. If this option is specified but the
-java.base module cannot be resolved from it, then the jlink command
-appends $JAVA_HOME/jmods to the module path.
-
-**--add-modules module [, module...]**
-
-Specifies the modules names (names of root modules) to add
-to the runtime image.
-Their transitive dependencies will add too.
-
-**--output path**
-
-Specifies the location of the generated runtime image.
-
-**--limit-modules module [, module...]**
-
-Limits the universe of observable modules to those in the transitive closure
-of the named modules, mod, plus the main module, if any, plus any further
-modules specified in the ***--add-modules*** option.
-
-It used to limit resolve any services other than the selected services in
-the ***--bind-services*** uses.
-
-**--bind-services**
-
-Link service provider modules and their dependencies.
-
-**--launcher command=main-module[/main-class]**
-
-Specifies the launcher command name for the module or the command name for
-the module and main class (the module and the main class names are
-separated by a slash).
-
-**--no-header-files**
-
-Excludes header files.
-
-**--no-man-pages**
-
-Excludes man pages.
-
-**--endian {little|big}**
-
-Specifies the byte order of the generated image. The default value is
-the format of your system's architecture.
-
-**--ignore-signing-information**
-
-Suppresses a fatal error when signed modular JARs are linked in the runtime
-image. The signature-related files of the signed modular JARs aren't copied
-to the runtime image.
-
-**@filename**
-
-Reads options from the specified file.
-An options file is a text file that contains the options and values
-that you would typically enter in a command prompt. Options may appear on
-one line or on several lines. You may not specify environment variables
-for path names. You may comment out lines by prefixing a hash symbol (#)
-to the beginning of the line.
-
-The following is an example of an options file for the jlink command:
-
-```file
-# comment
---module-path mlib
---add-modules com.greetings
---output greetingsapp
-```
-
-**--disable-plugin pluginname**
-
-Disables the specified plug-in.
-
-**--suggest-providers [name, ...]**
-
-Suggest providers that implement the given service types from the module path
-
-**--save-opts filename**
-
-Save jlink options in the given file
-
-**--resources-last-sorter name**
-
-The last plugin allowed to sort resources
-
-**--post-process-path imagefile**
-
-Post process an existing image
-
-**--verbose**
-
-Enable verbose tracing
-
-## JLink tool plugins
-
-For a complete list of all available plug-ins, run the command
-
-```console
-jlink --list-plugins
-```
-
-For plug-in options that require a pattern-list, the value is
-a comma-separated list of elements, with each element using one
-the following forms:
-
-- glob-pattern
-- glob:glob-pattern
-- regex:regex-pattern
-- @filename
-
-filename is the name of a file that contains patterns to be used,
-one pattern per line.
-
-**--compress={0|1|2}[:filter=pattern-list]**
-
-Compresses all resources in the output image.
-
-- 0: No compression
-- 1: Constant string sharing
-- 2: ZIP
-
-An optional pattern-list filter can be specified to list the pattern of
-files to include.
-
-**--include-locales=langtag[,langtag ...]**
-
-Includes the list of locales where langtag is a BCP 47 language tag.
-This option supports locale matching as defined in RFC 4647. Ensure that you
-add the module jdk.localedata when using this option.
-
-Example:
-
-```console
---add-modules jdk.localedata --include-locales=en,ja,*-IN
-```
-
-**--order-resources=pattern-list**
-
-Orders the specified paths in priority order. If @filename is specified,
-then each line in pattern-list must be an exact match for the paths
-to be ordered.
-
-Example:
-
-```console
---order-resources=**/module-info.class,@classlist,/java.base/java/lang/**
-```
-
-**--exclude-resources=pattern-list**
-
-Specify resources to exclude. If @filename is specified,
-then each line in pattern-list must be an exact match for the paths
-to be ordered.
-
-Example:
-
-```console
---exclude-resources=**.jcov,glob:**/META-INF/**
-```
-
-**--strip-debug**
-
-Strips debug information from the output image.
-
-**--strip-java-debug-attributes**
-
-Strip Java debug attributes from classes in the output image.
-
-**--strip-native-commands**
-
-Exclude native commands (such as java/java.exe) from the image.
-
-**--dedup-legal-notices=[error-if-not-same-content]**
-
-De-duplicate all legal notices. If error-if-not-same-content is
-specified then it will be an error if two files of the same filename
-are different.
-
-**--exclude-files=pattern-list**
-
-Specify files to exclude.
-
-Example:
-
-```console
---exclude-files=**.java,glob:/java.base/lib/client/**
-```
-
-**--exclude-jmod-section={man|headers}**
-
-Specify a JMOD section to exclude.
-
-**--generate-jli-classes=@filename**
-
-Specify a file listing the java.lang.invoke classes to pre-generate.
-By default, this plugin may use a builtin list of classes to pre-generate.
-If this plugin runs on a different runtime version than the image being
-created then code generation will be disabled by default to guarantee
-correctness add ignore-version=true to override this.
-
-**--release-info=file|add:key1=value1:key2=value2:...|del:key-list**
-
-Load release properties from the supplied option file.
-
-- add: is to add properties to the release file.
-- del: is to delete the list of keys in release file.
-- Any number of key=value pairs can be passed.
-
-**--system-modules=retainModuleTarget**
-
-Fast loading of module descriptors (always enabled).
-
-**--vm={client|server|minimal|all}**
-
-Select the HotSpot VM in the output image. Default is all.
 
 [src]: https://github.com/akman/jlink-maven-plugin
 [release]: https://github.com/akman/jlink-maven-plugin/releases/latest
